force-app/main/default/objects/csfb__Composer_QuickMerge__c/csfb__Composer_QuickMerge__c.object-meta.xml
<CustomObject>
    <label>Conga Invoice Global Merge</label>
    <nameField>
        <label>Conga Invoice Global Merge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conga Invoice Global Merges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>