force-app/main/default/objects/csfb__Composer_QuickMerge__c/fields/csfb__Conga_Solution__c.field-meta.xml
<CustomField>
    <fullName>csfb__Conga_Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conga Solution</label>
    <referenceTo>csfb__Conga_Solution__c</referenceTo>
    <relationshipName>Composer_QuickMerge_Records</relationshipName>
    <type>Lookup</type>
</CustomField>