force-app/main/default/objects/csfb__Composer_QuickMerge__c/fields/csfb__Description__c.field-meta.xml
<CustomField>
    <fullName>csfb__Description__c</fullName>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>