force-app/main/default/objects/csfb__Composer_QuickMerge__c/fields/csfb__Launch_CM8__c.field-meta.xml
<CustomField>
    <fullName>csfb__Launch_CM8__c</fullName>
    <description>IF( 
 OR(csfb__Weblink_ID__c = null, csfb__Weblink_ID__c = &apos;&apos;), 

 IMAGE( &quot;/resource/csfb__DisabledLaunchButton&quot;, &quot;Launch Disabled&quot;),

 HYPERLINK(&quot;https://&quot; &amp; MID( $Api.Enterprise_Server_URL_320, FIND(&quot;://&quot;, $Api.Enterprise_Server_URL_100)+3, FIND( &quot;.com&quot;, $Api.Enterprise_Server_URL_100 )-4) 
 &amp; &quot;servlet/servlet.Integration?lid=&quot; &amp; csfb__Weblink_ID__c 
 &amp; &quot;&amp;eid=&quot; &amp; Id &amp; &quot;&amp;ic=1&quot; 
 , IMAGE( &quot;/resource/csfb__ComposerLaunchButton&quot; , &quot;Launch Composer&quot;), &quot;_blank&quot; )
)</description>
    <formula>IF( 
 OR(csfb__Weblink_ID__c = null, csfb__Weblink_ID__c = &apos;&apos;), 

 IMAGE( &quot;/resource/csfb__DisabledLaunchButton&quot;, &quot;Launch Disabled&quot;),

 HYPERLINK(&quot;/apex/csfb__SMComposer8Launcher?SampleRecordId=&quot; &amp; Id &amp; &quot;&amp;WeblinkId=&quot; &amp; csfb__Weblink_ID__c &amp; &quot;&amp;SMRecordId=&quot; &amp; csfb__Conga_Solution__r.Id &amp; &quot;&amp;OrganizationId=&quot; &amp; $Organization.Id
 , IMAGE( &quot;/resource/csfb__ComposerLaunchButton&quot; , &quot;Launch Composer&quot;), &quot;_blank&quot; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Use this button to launch the Composer QuickMerge Solution. Only available when the Button ID field is populated.</inlineHelpText>
    <label>Launch</label>
    <type>Text</type>
</CustomField>