force-app/main/default/objects/csfb__Composer_QuickMerge__c/fields/csfb__Weblink_ID__c.field-meta.xml
<CustomField>
    <fullName>csfb__Weblink_ID__c</fullName>
    <label>Button ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>