force-app/main/default/objects/csfb__Composer_QuickMerge__c/fields/csfb__Weblink_ID_Formula__c.field-meta.xml
<CustomField>
    <fullName>csfb__Weblink_ID_Formula__c</fullName>
    <formula>LEFT(csfb__Weblink_ID__c, 15)</formula>
    <label>Button ID</label>
    <type>Text</type>
</CustomField>