force-app/main/default/objects/csfb__Composer_QuickMerge__c/fields/csfb__Weblink_Name__c.field-meta.xml
<CustomField>
    <fullName>csfb__Weblink_Name__c</fullName>
    <label>Button Name</label>
    <type>TextArea</type>
</CustomField>