force-app/main/default/objects/csfb__Composer_QuickMerge__c/fields/csfb__Weblink_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>csfb__Weblink_Name_Formula__c</fullName>
    <formula>csfb__Weblink_Name__c</formula>
    <label>Button Name</label>
    <type>Text</type>
</CustomField>