force-app/main/default/objects/csfb__Composer_QuickMerge__c/listViews/csfb__All.listView-meta.xml
<ListView>
    <fullName>csfb__All</fullName>
    <columns>NAME</columns>
    <columns>csfb__Weblink_Name_Formula__c</columns>
    <columns>csfb__Conga_Solution__c</columns>
    <columns>csfb__Weblink_ID_Formula__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>csfb__Launch_CM8__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>